Fix issues for Contact Us page and spacing adjustments

--- a/src/app/common/section-header/section-header.component.css
+++ b/src/app/common/section-header/section-header.component.css
@@ -5,5 +5,6 @@
     font-size: 48px;
     line-height: 36px;
     text-align: center;
-    margin: 40px 0;
+    margin: 0;
+    display: block;
 }
