--- a/src/app/pages/contact-us/components/message-us/message-us.component.css
+++ b/src/app/pages/contact-us/components/message-us/message-us.component.css
@@ -1,3 +1,7 @@
+.message-us-section{
+    display: flex;
+}
+
 .form-field{
     width: 556px;
     height: 56px;
@@ -18,30 +22,45 @@
     width: 87px;
     height: 40px;
 
-    /* SF/Yellow 30 */
-
     background: #F3AC1D;
     border-radius: 100px;
-
-    /* Inside auto layout */
 
     flex: none;
     order: 3;
     flex-grow: 0;
 
-    font-weight: bold;
+    font-weight: 600;
+}
+
+.submit-button:visited{
+    font-weight: 800;
 }
 
 .contact-us-image{
-    width: 1080px;
+    width: 100%;
     height: 522px;
-    max-width: 100%;
+    max-width: 1080px;
 
     position: absolute;
-    right: 0%;
-    top: 31%;
 }
 
 .container.message-us-section{
     margin-bottom: 56px;
+}
+
+.message-form{
+    float: left;
+    padding-right: 75px;
+}
+
+::ng-deep .mat-focused .mat-form-field-required-marker{
+    color: #f44336;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick{
+    color: #543287;
+}
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick{
+    color: #f44336;
 }
