--- a/src/styles.css
+++ b/src/styles.css
@@ -20,39 +20,17 @@
   padding: 56px 192px;
 }
 
-.section-headline{
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 56px;
-
-  text-align: center;
-  letter-spacing: -0.02em;
-
-  color: #000000;
-  padding-bottom: 50px;
-}
-
-.section-headline-with-description{
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 56px;
-
-  text-align: center;
-  letter-spacing: -0.02em;
-
-  color: #000000;
+.section{
+  padding-top: 40px;
 }
 
 .section-header-description{
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-
   text-align: center;
-
   color: #000000;
-
-  padding-bottom: 50px;
+  padding-top: 8px;
 }
 
 body{
